--- a/public/css/editmypage.css
+++ b/public/css/editmypage.css
@@ -1,78 +1,151 @@
 :root {
     --grid-cols: 1;
     --grid-rows: 1;
-  }
-  #main-page-container{
+    
+}
+
+*{
+    font-family: 'Nunito', sans-serif;
+}
+
+@font-face {
+    font-family:'Segoe Bold';
+    src: url('/fonts/Segoe UI Bold.ttf');
+}
+
+@font-face {
+    font-family:'Segoe';
+    src: url('/fonts/Segoe UI.ttf');
+}
+
+@font-face {
+    font-family:'Newake Demo';
+    src: url('/fonts/newake-demo-400.otf');
+}
+
+a{
+    text-decoration:none;
+    color:white;
+}
+
+::-webkit-scrollbar{
+    width:7px;
+}
+
+::-webkit-scrollbar-track{
+    background:#172a3a;
+    border-radius:30px;
+}
+::-webkit-scrollbar-thumb{
+    background:#75dddd;
+    border-radius:30px;
+}
+
+#main-page-container{
     width: 100%;
-    height:95vh;
+    height: 100vh;
     margin: auto;
-    background-color: #172a3a;
+    background-color: #010705;
     display:grid;
     grid-template-columns:1fr 3fr;
-    grid-template-rows:1fr;
+    grid-template-rows: 6fr 1fr;
 }
-  
- /* #cards {
-    display: grid;
-    grid-gap: 1em;
-    grid-template-rows: repeat(var(--grid-rows), 1fr);
-    grid-template-columns: repeat(var(--grid-cols), 1fr);
-  }*/
-  #search-container{
-      overflow: auto;
-  }
 
-  #cards-container{
-      margin:auto;
-      border:1px solid white;
-      border-radius:20px;
-      padding:50px;
-      overflow:auto;
-      margin-top:100px;
-      margin-bottom:10px;
-  }
-  .grid-item {
+#search{
+    height:30px;
+    font-weight: 800;
+    border-radius:20px;
+    border:none;
+    background-color:#ffffff;
+    color:#172a3a;
+    outline:none;
+    padding-left:10px;
+    padding-right:10px;
+    width:200px;
+    box-shadow: inset 0px 0px 1px 3px rgb(0 0 0 / 0%);
+    margin:auto;
+}
+
+#search-input-container{
+    height:30px !important;
+    width:80%;
+    margin-top:10px;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5px;
+    flex-direction: column;
+}
+
+#search-container{
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    /* height: auto; */
+    align-items: center;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+#cards-container{
+
+    padding:50px;
+    overflow: auto;
+    background-color: #000000f2;
+    margin-left:7px;
+    border-left:3px solid white;
+}
+
+.grid-item {
     padding: 0;
     border: 1px solid #dddddd69;
     border-style:dashed;
-    border-radius:20px;
+    border-radius: 10px;
     text-align: center;
     display: inline-block;
     width: 12vw;
     height: 12vw;
     margin-top: 0;
-  }
+}
 
-  .single-placement-row{
+.single-placement-row{
     margin:0;
     padding:0 80px 0 80px;
     margin-bottom: 2vw;
     display:grid;
     grid-template-columns:1fr 1fr 1fr 1fr;
     grid-gap: 2vw;
-  }
-
-
+}
 
 .title-placement-row{
-  width:100%;
-  /*padding:0 80px 0 80px; */
-  height:12vh;
-  border:1px solid white;
+    width:100%;
+    height:12vh;
+    margin-bottom: 2vw;
+    text-transform: uppercase;
 }
+
 .title-placement-row > input{
-  background-color:transparent;
-  outline:none;
-  border:none;
-  border:1px solid white;
-  width:100%;
-  height:100%;
-  padding:0;
-  margin:0;
-  font-size:5em;
-  font-weight:700;
-  -webkit-text-stroke: 1px black;
+    background-color:transparent;
+    outline:none;
+    border:none;
+    border:1px solid rgba(255, 255, 255, 0.808);
+    width:100%;
+    height:100%;
+    padding:0;
+    margin:0;
+    font-size:5em;
+    font-weight:700;
+    -webkit-text-stroke: 1px white;
     color: transparent;
+    font-family: 'Arial';
+    text-transform: uppercase;
+    letter-spacing: 7px;
+    border-style:dashed;
+}
+
+.title-text{
+    position: relative;
+    
 }
 
 body{
@@ -96,13 +169,44 @@ body{
 .cover-image{
     width: 6vw;
 }
+
+.cover-container{
+    width: 20vh;
+    display: inline-block;
+    position:relative;
+    top: 1vh;
+    left: 1vh;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 27%);
+}
+
+.cover-container > a{
+    width:100%;
+    height:100%;
+    display:block;
+    position:relative;
+    top:0;
+    left:0;
+}
+.cover-container> a > img{
+        
+    width:100%;
+    height:100%;
+    display:block;
+    position:relative;
+    top:0;
+    left:0;
+    border-radius: 10px;
+}
+
 .cover-container-placed{
     width: 100%;
     height:100%;
 }
 .cover-container-placed > a > img{
+    
     width: 100%;
-
+    border-radius: 10px;
 }
 
 .big-grid-item{
@@ -114,40 +218,62 @@ body{
 }
 
 .title-container{
-    display: inline;
-    position: relative;
-    bottom: 100px;
-    left: 150px;
+    position: absolute;
+    word-wrap: no-wrap;
+    top: 7vh;
+    left: 11vw;
+    overflow: hidden;
+    width: 11vw;
+    white-space: nowrap;
+}
+.title-container > a{
+    font-size:20px;
+    text-shadow: 0px 1px 3px #000000;
 }
 
 .artist-container{
-    /* display: inline; */
-    position: relative;
-    bottom: 70px;
-    left: 150px;
+    position: absolute;
+    top: 12vh;
+    left: 11vw;
+    overflow: hidden;
+    width: 11vw;
+    white-space: nowrap;
+}
+
+.artist-text{
+    text-decoration:underline
 }
 
 .duration-container{
-    /* display: inline-block; */
-    position: relative;
-    bottom: 130px;
-    left: 85%;
+    display:none;
+    position: absolute;
+    top: 12vh;
+    left: 11vw;
+    width: 11vw;
+}
+
+.duration-text{
+    font-size:14px;
 }
 
 .single-result-container{
     position:relative;
-    padding-top: 30px;
     padding-bottom: -30px;
-    height: 20%;
+    height: 22vh;
     margin-bottom: 10px;
-    border: 1px solid white;
     border-radius: 10px;
+    background-color: #172a3a;
+    width: 95%;
+    box-shadow: 0px 0px 5px 0px rgb(0 0 0 / 27%);
+    padding-bottom: 1vh;
 }
+
 
 .single-placed-container{
     position:relative;
     width:100%;
     height:100%;
+    border-radius: 10px;
 }
 
 .add-card-sign{
@@ -170,11 +296,20 @@ body{
     z-index: 2;
     float: left;
     text-align: center;
+    border-top-left-radius:10px;
+    border-bottom-left-radius:10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition:opacity 200ms ease;
+    opacity:0;
 }
 
 .drag-div-small:hover{
-    background-color: rgb(104, 102, 102, 0.226);
+    opacity:1;
+    background-color: #09bc8ae6;
     cursor: grab;
+    text-shadow: 0px 1px 5px #000000;
 }
 
 .drag-div-big{
@@ -186,9 +321,254 @@ body{
     z-index: 2;
     float: right;
     text-align: center;
+    border-top-right-radius:10px;
+    border-bottom-right-radius:10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity:0;
+    transition:opacity 200ms ease;
 }
 
 .drag-div-big:hover{
-    background-color: rgba(104, 102, 102, 0.226);
+    opacity:1;
+    background-color: #09bc8ae6;
     cursor: grab;
+    text-shadow: 0px 1px 5px #000000;
+}
+
+#buttons-container{
+    display:flex;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #09bc8a;
+    margin-left:7px;
+    border-left:3px solid white;
+}
+
+#buttons-container > button{
+    width:15vw;
+    height:40px;
+    background-color: #ffffff;
+    border:none;
+    border-radius:20px;
+    color: #004346;
+    font-weight: 900;
+    border:2px solid white;
+    transition:box-shadow 200ms ease;
+}
+
+#buttons-container > button:hover{
+    box-shadow: inset 0px 0px 8px 4px rgb(0 0 0 / 27%);
+    cursor:pointer;
+}
+
+#buttons-container > button:active{
+    position:relative;
+    top:2px;
+}
+
+#next{
+    background-color: #000000 !important;
+    color: white !important;
+}
+
+.remove-button{
+    
+    background-color: white;
+    border-radius: 50%;
+    outline: none;
+    border: none;
+    width: 20px;
+    font-size: 34px;
+    height: 20px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    color: #09bc8a;
+    position: relative;
+    left: 50%;
+    bottom: 11%;
+    transform: translate(-50%, -50%);
+    transition:transform 200ms ease;
+    box-shadow: 0px 0px 15px 15px rgb(0 0 0 / 16%);
+}
+
+.remove-button:hover, .left-button:hover, .right-button:hover{
+    cursor:pointer;
+    transform:translate(-50%, -50%) scale(1.1);
+}
+
+.top-button:hover{
+    cursor:pointer;
+    transform:translate(-50%, -50%) scale(1.1) rotate(90deg);
+}
+
+#search-info{
+    position:absolute;
+    top:50%;
+    left:10%;
+    width:10vw;
+    text-align: center;
+    transform:translate(-30%,-50%);
+}
+
+#arrow-body{
+    background-color:white;
+    width:4px;
+    height:35px;
+    position:absolute;
+    bottom:120%;
+    left:50%;
+    border-radius:10px;
+    animation:arrow-body 2.5s ease infinite;
+}
+#arrow-left{
+    background-color:white;
+    width:4px;
+    height: 20px;
+    position:absolute;
+    top: -45%;
+    transform: rotate(35deg);
+    left: 51%;
+    border-radius:10px;
+    animation:arrow-left 2.5s ease infinite;
+    transform-origin:  top;
+}
+#arrow-right{
+    background-color:white;
+    width:4px;
+    height:20px;
+    position:absolute;
+    bottom: 145%;
+    transform: rotate(145deg);
+    left: 49%;
+    border-radius:10px;
+    animation:arrow-right 2.5s ease infinite;
+    transform-origin:  bottom;
+}
+
+@keyframes arrow-body {
+    0% {
+        height:0; 
+    }
+    50% {
+        height:35px;
+    }
+    100% {
+        height:0px;
+    }
+}
+  
+@keyframes arrow-right {
+    0% {
+        transform: rotate(145deg) scaleY(1);
+    }
+    50%{
+        transform: rotate(145deg) scaleY(1.5);
+    }
+    100% {
+        transform: rotate(145deg) scaleY(1); 
+    }
+}  
+
+@keyframes arrow-left {
+    0% {
+        transform: rotate(35deg) scaleY(1);
+    }
+    50%{
+        transform: rotate(35deg) scaleY(1.5);
+    }
+    100% {
+        transform: rotate(35deg) scaleY(1);  
+    }
+}
+
+.type-text{
+    display: flex;
+    justify-content: center;
+    background-color: #000000;
+    margin: 0;
+    padding-top: 22px;
+    text-transform: uppercase;
+    font-family: 'Newake Demo';
+    color: wheat;
+    letter-spacing: 3px;
+    padding-bottom: 10px;
+    font-weight: 400;
+    font-size: 36px;
+}
+
+.left-button{
+    background-color: #08b786;
+    border-radius: 50%;
+    outline: none;
+    border: none;
+    width: 32px;
+    font-size: 24px;
+    height: 32px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    position: absolute;
+    left: 15%;
+    bottom: 40%;
+    transform: translate(-50%, -50%);
+    transition: transform 200ms ease;
+    box-shadow: 0px 0px 15px 15px rgb(0 0 0 / 16%);
+}
+
+.right-button{
+    background-color: #08b786;
+    border-radius: 50%;
+    outline: none;
+    border: none;
+    width: 32px;
+    font-size: 24px;
+    height: 32px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    position: absolute;
+    left: 85%;
+    bottom: 40%;
+    transform: translate(-50%, -50%);
+    transition: transform 200ms ease;
+    box-shadow: 0px 0px 15px 15px rgb(0 0 0 / 16%);
+}
+
+.top-button{
+    background-color: #08b786;
+    border-radius: 50%;
+    outline: none;
+    border: none;
+    width: 32px;
+    font-size: 24px;
+    height: 32px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    position: absolute;
+    left: 50%;
+    bottom: 67%;
+    transform: translate(-50%, -50%) rotate(90deg);
+    transition: transform 200ms ease;
+    box-shadow: 0px 0px 15px 15px rgb(0 0 0 / 16%);
+}
+
+@keyframes marquee {
+    0% {
+        left: 100%;
+    }
+    100% {
+        left: -250%;
+    }
 }
